--- a/invest.html
+++ b/invest.html
@@ -1,14 +1,100 @@
-<!doctype html><html><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Invest · Nova</title><link rel="stylesheet" href="assets/css/style.css?v=H95c">
-<script type="text/javascript" src="https://payhip.com/payhip.js"></script></head>
-<body><div class="header"><a href="reflection_look_forward.html">← Reflection</a> <a href="index.html">Home</a></div>
-<main class="wrap"><h1>Invest in Yourself</h1>
-<div class="card"><p>Choose the plan that matches your readiness to grow.</p></div>
-<div class="grid">
-  <div class="card"><h3>Starter</h3><p>$29.99 / month</p><a class="btn" href="https://payhip.com/b/GdfU7" target="_blank" rel="noopener">Choose Starter</a></div>
-  <div class="card"><h3>Pro</h3><p>$99 / month</p><a class="btn" href="https://payhip.com/b/knC1Z" target="_blank" rel="noopener">Choose Pro</a></div>
-  <div class="card"><h3>Mastery</h3><p>$149 / month</p><a class="btn" href="https://payhip.com/b/re4Hy" target="_blank" rel="noopener">Choose Mastery</a></div>
-  <div class="card"><h3>Purpose Book</h3><p>$14.99</p><a class="btn" href="https://payhip.com/b/N7LVg" target="_blank" rel="noopener">Get the Book</a></div>
-</div>
-<footer>Nova v9.5b — Discover Purpose. Live It Boldly.</footer></main></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Invest in Yourself · Nova</title>
+  <!-- Payhip embed (load once site-wide; safe to include here as well) -->
+  <script type="text/javascript" src="https://payhip.com/payhip.js"></script>
+  <style>
+    :root { --accent:#17a34a; --ink:#0b1220; --bg:#0b1220; --card:#0f1830; --muted:#cfe9d6; }
+    *{box-sizing:border-box}
+    body{
+      margin:0; font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji";
+      background: linear-gradient(180deg, #0b1220 0%, #0a1020 100%); color:#f5f8fb;
+    }
+    header{
+      padding:48px 20px 12px; text-align:center;
+    }
+    header h1{ margin:0 0 8px; font-size:32px; letter-spacing:.3px; }
+    header p.sub{ margin:0; opacity:.9 }
+    main{ max-width:980px; margin:32px auto 64px; padding:0 20px; }
+    .card{
+      background:rgba(255,255,255,0.04); border:1px solid rgba(255,255,255,0.08);
+      border-radius:16px; padding:24px; margin:16px 0;
+      backdrop-filter: blur(6px);
+    }
+    .grid{
+      display:grid; grid-template-columns: repeat(auto-fit,minmax(240px,1fr)); gap:16px;
+    }
+    .plan h3{ margin:0 0 6px; font-size:18px }
+    .plan p{ margin:0 0 12px; font-size:14px; color:#dfe7ef }
+    .buyrow{ display:flex; gap:10px; flex-wrap:wrap; align-items:center }
+    .payhip-buy-button{ font-weight:600 }
+    .note{
+      margin-top:6px; font-size:12px; color:#cfe9d6; opacity:.95
+    }
+    .footer{
+      text-align:center; margin-top:28px; font-size:13px; color:#c8d4e0; opacity:.9
+    }
+    a.back{
+      display:inline-block; margin-top:8px; font-size:13px; text-decoration:none;
+      color:#bfe2c7; border:1px solid rgba(191,226,199,.45); padding:8px 12px; border-radius:10px;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Invest in Yourself</h1>
+    <p class="sub">Your next best investment is you — time, skill, and faith planted in purpose.</p>
+  </header>
+
+  <main>
+    <section class="card">
+      <p style="margin:0 0 10px;">Choose the path that fits how you want to grow next. Each option unlocks tools that turn your Nova insights into action.</p>
+    </section>
+
+    <section class="grid">
+      <article class="card plan">
+        <h3>Starter Plan — $29.99/mo</h3>
+        <p>All 50-trait discovery + PDF, job match suggestions, resume builder, and one PRO doc preview monthly.</p>
+        <div class="buyrow">
+          <a href="https://payhip.com/b/GdfU7" class="payhip-buy-button" data-theme="green" data-product="GdfU7">Buy Now</a>
+        </div>
+        <div class="note">Great for getting started and building momentum.</div>
+      </article>
+
+      <article class="card plan">
+        <h3>PRO Plan — $99/mo</h3>
+        <p>Everything in Starter, plus resume rewrite AI, unlimited cover letters, company intelligence reports, advanced job filters, and priority support.</p>
+        <div class="buyrow">
+          <a href="https://payhip.com/b/knC1Z" class="payhip-buy-button" data-theme="green" data-product="knC1Z">Buy Now</a>
+        </div>
+        <div class="note">For accelerated search and sharper positioning.</div>
+      </article>
+
+      <article class="card plan">
+        <h3>Mastery Plan — $149/mo</h3>
+        <p>Everything in PRO, plus 1:1 coaching/premium support, a career roadmap PDF, and early access. For those ready to go all‑in.</p>
+        <div class="buyrow">
+          <a href="https://payhip.com/b/re4Hy" class="payhip-buy-button" data-theme="green" data-product="re4Hy">Buy Now</a>
+        </div>
+        <div class="note">Your return on self‑investment.</div>
+      </article>
+
+      <article class="card plan">
+        <h3>Purpose Book — $14.99</h3>
+        <p><em>How to Know Your Purpose</em> — a concise, faith‑forward guide to align desire, gifts, and assignment.</p>
+        <div class="buyrow">
+          <a href="https://payhip.com/b/N7Lvg" class="payhip-buy-button" data-theme="green" data-product="N7Lvg">Buy Now</a>
+        </div>
+        <div class="note">Great companion to Nova + Navi.</div>
+      </article>
+    </section>
+
+    <div class="footer">
+      <a class="back" href="results.html">← Back to Results</a>
+    </div>
+  </main>
+</body>
+</html>
