--- a/results.html
+++ b/results.html
@@ -1,29 +1,53 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Nova • Results</title><link rel="stylesheet" href="assets/css/style.css"/><script defer src="assets/js/state.js"></script><script defer src="assets/js/data.js"></script></head>
-<body><div class="container"><div class="header"><div class="brand">Nova</div><div class="badge">PDF & Navi ready</div></div>
-<div class="card"><h1 class="h1">Your results</h1><div id="summary" class="p"></div><div class="hr"></div><table><thead><tr><th>Occupation</th><th>Score</th><th class="small">SOC</th></tr></thead><tbody id="rows"></tbody></table><div class="hr"></div><a class="btn" href="reflection.html">Continue • Reflection</a></div></div>
-<script>
-(async ()=>{
-  const EMBED_JOBS=[
-    {"title":"Data Analyst","summary":"Analyze datasets, build dashboards, support decisions.","categoryIds":["science","bizfin"],"soc_code":"15-2051"},
-    {"title":"Software Engineer","summary":"Design and build applications and services.","categoryIds":["tech"],"soc_code":"15-1252"},
-    {"title":"Registered Nurse","summary":"Provide patient care with empathy and precision.","categoryIds":["health"],"soc_code":"29-1141"},
-    {"title":"Electrician","summary":"Install and maintain electrical systems.","categoryIds":["trades"],"soc_code":"47-2111"},
-    {"title":"Customer Success Specialist","summary":"Support customers with communication and reliability.","categoryIds":["hospitality","workers"],"soc_code":"43-4051"}
-  ];
-  let data={ooh:EMBED_JOBS};
-  try{ const d=await loadAllData(); if(Array.isArray(d.ooh)&&d.ooh.length) data=d; }catch(e){}
-  const matches = computeMatches({
-    ooh: data.ooh,
-    selectedCategoryIds: JSON.parse(localStorage.getItem('nova.selectedCategoryIds')||'[]'),
-    selectedTraits: JSON.parse(localStorage.getItem('nova.selectedTraits')||'[]')
-  }, 40);
-  if(window.NOVA&&NOVA.state){ NOVA.state.matches=matches; NOVA.save(); }
-  document.getElementById('summary').innerHTML = `
-    <div class="list">${(JSON.parse(localStorage.getItem('nova.selectedCategories')||'[]')).map(c=>'<span class="pill">'+c+'</span>').join('')}</div>
-    <div class="list">${(JSON.parse(localStorage.getItem('nova.selectedTraits')||'[]')).slice(0,10).map(t=>'<span class="pill">'+(t.name||t)+'</span>').join('')}</div>`;
-  const tb=document.getElementById('rows'); tb.innerHTML='';
-  if(matches.length===0){ const tr=document.createElement('tr'); tr.innerHTML='<td colspan="3" class="small">Matches will appear once jobs data is connected.</td>'; tb.appendChild(tr); }
-  matches.forEach(m=>{ const tr=document.createElement('tr'); tr.innerHTML = `<td>${m.title}<div class="small">${m.summary||''}</div></td><td>${m.score}</td><td class="small">${m.soc||''}</td>`; tb.appendChild(tr); });
-})();
-</script></body></html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>NOVA — Your Matches</title>
+  <link rel="stylesheet" href="styles.css"/>
+</head>
+<body>
+  <header class="header">
+    <h1>NOVA</h1>
+    <nav class="nav">
+      <a href="traits.html">Back to Traits</a>
+      <a href="store.html">Purpose Book</a>
+    </nav>
+  </header>
+  <main class="container">
+    <h2>Your top career matches</h2>
+    <p class="muted">Based on the traits you selected.</p>
+    <section id="results" class="grid" aria-live="polite" aria-busy="true"></section>
+    <div style="margin:24px 0;display:flex;gap:12px;flex-wrap:wrap">
+      <button id="pdfBtn" class="btn">Download PDF Report</button>
+      <button id="emailBtn" class="btn">Email me my results</button>
+    </div>
+
+    <form id="emailForm" style="display:none;max-width:520px">
+      <label for="email">Your email</label><br/>
+      <input id="email" type="email" required placeholder="you@example.com" style="width:100%;padding:12px;border-radius:8px;border:1px solid var(--border);background:transparent;color:var(--text)">
+      <div style="margin-top:12px;display:flex;gap:8px">
+        <button class="btn primary" type="submit">Send</button>
+        <button class="btn" type="button" id="cancelEmail">Cancel</button>
+      </div>
+      <p class="muted" style="margin-top:10px">We’ll store your email locally unless you configure a backend endpoint.</p>
+    </form>
+  </main>
+  <footer>© NOVA</footer>
+  <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
+  <script src="results.js"></script>
+
+<!-- Nova Reflection (OOH) scripts -->
+<script src="src/nova_roles.js"></script>
+<script src="src/reflection.js"></script>
+
+
+<!-- Transition CTA -->
+<div class="invest-cta" style="margin:24px 0;">
+  <a href="invest.html" class="cta" style="display:inline-block;padding:12px 18px;border-radius:10px;background:#17a34a;color:#fff;text-decoration:none;font-weight:600;">
+    Invest in Yourself
+  </a>
+</div>
+
+</body>
+</html>
