--- a/plans.html
+++ b/plans.html
@@ -1,47 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Plans · Nova</title>
-  <link rel="stylesheet" href="assets/css/style.css?v=H95b">
-  <script type="text/javascript" src="https://payhip.com/payhip.js"></script>
-</head>
-<body>
-  <div class="header"><a href="invest.html">← Back to Invest</a><nav><a href="index.html">Home</a> • <a href="reset.html">Reset</a></nav></div>
-  <main class="wrap">
-    <h1>Plans & Pricing</h1>
-    <div class="pricing">
-      <div class="tier">
-        <h3>Starter</h3>
-        <div class="price">$29.99 / month</div>
-        <ul><li>Nova discovery + Role Reveal</li><li>Basic résumé builder & job suggestions</li><li>Weekly “next step” prompts</li></ul>
-        <div><a href="https://payhip.com/b/GdfU7" class="payhip-buy-button" data-theme="green" data-product="GdfU7" target="_blank" rel="noopener">Choose Starter</a></div>
-      </div>
-      <div class="tier">
-        <h3>Pro</h3>
-        <div class="price">$99 / month</div>
-        <ul><li>Everything in Starter</li><li>AI résumé rewrite & role tailoring</li><li>Company insights & search filters</li></ul>
-        <div><a href="https://payhip.com/b/knC1Z" class="payhip-buy-button" data-theme="green" data-product="knC1Z" target="_blank" rel="noopener">Choose Pro</a></div>
-      </div>
-      <div class="tier">
-        <h3>Mastery</h3>
-        <div class="price">$149 / month</div>
-        <ul><li>Everything in Pro</li><li>1:1 coaching + career roadmap PDF</li><li>Quarterly masterclass & accountability</li></ul>
-        <div><a href="https://payhip.com/b/re4Hy" class="payhip-buy-button" data-theme="green" data-product="re4Hy" target="_blank" rel="noopener">Choose Mastery</a></div>
-      </div>
-      <div class="tier">
-        <h3>How to Know Your Purpose (Book)</h3>
-        <div class="price">$14.99 · one‑time</div>
-        <ul><li>30‑day guided prompts</li><li>Weekly check‑ins & templates</li><li>Practical steps to build momentum</li></ul>
-        <div><a href="https://payhip.com/b/N7LVg" class="payhip-buy-button" data-theme="green" data-product="N7LVg" target="_blank" rel="noopener">Get the Purpose Book</a></div>
-      </div>
-    </div>
-    <div class="bar">
-      <a class="btn btn-ghost" href="invest.html">← Back</a>
-      <a class="btn" href="index.html">Return to Welcome</a>
-    </div>
-    <footer>Nova v9.5b — Discover Purpose. Live It Boldly.</footer>
-  </main>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>Nova • Plans</title><link rel="stylesheet" href="assets/css/style.css"/><script type="text/javascript" src="https://payhip.com/payhip.js"></script><script defer src="assets/js/state.js"></script></head>
+<body><div class="container"><div class="header"><div class="brand">Nova</div><div class="badge">Payhip Connected</div></div>
+<div class="card"><h1 class="h1">Choose your plan</h1><div class="grid cols-4">
+  <div class="card"><div class="small">Resource</div><div class="h1" style="font-size:18px">How to Know Your Purpose</div><a href="https://payhip.com/b/N7Lvg" class="payhip-buy-button" data-theme="green" data-product="N7Lvg">Buy Now</a></div>
+  <div class="card"><div class="small">$29.99/mo</div><div class="h1" style="font-size:18px">NAVI Starter</div><a href="https://payhip.com/b/GdfU7" class="payhip-buy-button" data-theme="green" data-product="GdfU7">Buy Now</a></div>
+  <div class="card"><div class="small">$99/mo</div><div class="h1" style="font-size:18px">NAVI Pro</div><a href="https://payhip.com/b/knC1Z" class="payhip-buy-button" data-theme="green" data-product="knC1Z">Buy Now</a></div>
+  <div class="card"><div class="small">$149.99/mo</div><div class="h1" style="font-size:18px">NAVI Mastery</div><a href="https://payhip.com/b/re4Hy" class="payhip-buy-button" data-theme="green" data-product="re4Hy">Buy Now</a></div>
+</div></div></div></body></html>
