--- a/traits.html
+++ b/traits.html
@@ -1,29 +1,58 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>NOVA — Traits</title>
-  <link rel="stylesheet" href="styles.css"/>
-</head>
-<body>
-  <header class="header">
-    <h1>NOVA</h1>
-    <nav class="nav">
-      <a href="index.html">Intro</a>
-      <a href="store.html">Purpose Book</a>
-    </nav>
-  </header>
-  <main class="container">
-    <h2>Select the traits that feel most like you</h2>
-    <p class="muted">Pick as many as you want. We’ll suggest roles that fit your wiring.</p>
-    <section id="traits" class="grid" aria-live="polite" aria-busy="true"></section>
-    <div style="margin-top:20px">
-      <button id="continue" class="btn primary">See my matches</button>
-    </div>
-  </main>
-  <footer>© NOVA</footer>
-  <script src="traits.js"></script>
-<script src="src/nova_categories.js"></script>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>Nova • Traits</title><link rel="stylesheet" href="assets/css/style.css"/><script defer src="assets/js/state.js"></script><script defer src="assets/js/data.js"></script></head>
+<body><div class="container"><div class="header"><div class="brand">Nova</div><div class="badge">Selected: <span id="count">0</span> traits</div></div>
+<div class="card"><h1 class="h1">Select traits that feel true</h1><div id="filters" class="list"></div><div class="hr"></div><div id="tray" class="grid cols-3"></div><div class="hr"></div><div class="grid cols-2"><button id="next" class="btn primary">See My Results</button><button id="clear" class="btn ghost">Clear</button></div></div></div>
+<script>
+(async ()=>{
+  const selectedIds = new Set(JSON.parse(localStorage.getItem('nova.selectedCategoryIds')||'[]'));
+  const selectedLabels = JSON.parse(localStorage.getItem('nova.selectedCategories')||'[]');
+  document.getElementById('filters').innerHTML = selectedLabels.map(l=> `<span class="pill">${l}</span>`).join('');
+
+  const EMBED=[
+    {"id":"detail","name":"Detail-oriented","categoryId":"bizfin"},
+    {"id":"problem","name":"Problem solving","categoryId":"tech"},
+    {"id":"empathy","name":"Empathy","categoryId":"health"},
+    {"id":"comm","name":"Communication","categoryId":"edu"},
+    {"id":"creative","name":"Creativity","categoryId":"creative"},
+    {"id":"lead","name":"Team leadership","categoryId":"pubsvc"},
+    {"id":"analysis","name":"Data analysis","categoryId":"science"},
+    {"id":"hands","name":"Hands-on","categoryId":"trades"},
+    {"id":"customer","name":"Customer focus","categoryId":"hospitality"},
+    {"id":"reliable","name":"Reliability","categoryId":"workers"}
+  ];
+
+  let list = EMBED;
+  try {
+    const data = await loadAllData();
+    if(Array.isArray(data.traits) && data.traits.length){ list = data.traits; }
+  } catch(e) {}
+
+  let pool = list.filter(t=> !selectedIds.size || selectedIds.has(t.categoryId));
+  if(pool.length===0){ pool = list; }
+
+  const tray=document.getElementById('tray');
+  const selectedKeys = new Set((JSON.parse(localStorage.getItem('nova.selectedTraits')||'[]')).map(t=> t.id||t.name||t));
+
+  function render(){
+    tray.innerHTML='';
+    pool.forEach(t=>{
+      const key=t.id||t.name;
+      const b=document.createElement('button'); b.className='btn ghost'; b.innerHTML=`<div><div style="font-weight:800">${t.name}</div><div class="small">${t.categoryId}</div></div>`;
+      if(selectedKeys.has(key)) b.classList.add('active');
+      b.onclick=()=>{ if(selectedKeys.has(key)){ selectedKeys.delete(key); b.classList.remove('active'); } else { selectedKeys.add(key); b.classList.add('active'); } setCount(); };
+      tray.appendChild(b);
+    });
+    setCount();
+  }
+  function setCount(){ document.getElementById('count').textContent = selectedKeys.size; }
+  render();
+
+  document.getElementById('next').onclick=()=>{
+    const chosen = pool.filter(t=> selectedKeys.has(t.id||t.name));
+    localStorage.setItem('nova.selectedTraits', JSON.stringify(chosen));
+    if(window.NOVA&&NOVA.state){ NOVA.state.selectedTraits = chosen; NOVA.save(); }
+    location.href='results.html';
+  };
+  document.getElementById('clear').onclick=()=>{ selectedKeys.clear(); render(); };
+})();
+</script></body></html>
