--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
+
 <!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Nova • Welcome</title><link rel="stylesheet" href="assets/css/style.css"/><script defer src="assets/js/state.js"></script></head>
-<body><div class="container"><div class="header"><div class="brand">Nova</div><div class="badge">v8.7e • Unified</div></div>
+<body><div class="container"><div class="header"><div class="brand">Nova</div><div class="badge">Unified</div></div>
 <div class="card"><div class="grid cols-2" style="align-items:start">
   <div>
     <div class="small">Welcome</div>
@@ -13,4 +14,4 @@
     <label class="small">Username</label><input class="btn block" placeholder="e.g. drew"/>
     <div style="height:8px"></div><label class="small">PIN</label><input class="btn block" placeholder="4–6 digits"/>
   </div>
-</div></div></div></body></html>
+</div></div><div class="footer-ver">v8.7f • Unified</div></div></body></html>
